--- a/web/src/global.css
+++ b/web/src/global.css
@@ -21,6 +21,17 @@ button {
     cursor: pointer;
 }
 
+form textarea {
+    width: 100%;
+    min-height: 140px;
+    color: #333;
+    border: 1px solid #dcdce6;
+    border-radius: 8px;
+    padding: 16px 24px;
+    line-height: 24px;
+    resize: vertical;
+}
+
 form input {
     width: 100%;
     height: 60px;
